--- a/changelog.txt
+++ b/changelog.txt
@@ -17,3 +17,8 @@ version
 - Changed yuoung_grandma to young_grandma
 - REPEAT modifier defaults to 2
 - Added support for ogg sound effects
+
+9/21/2020
+1.2.0
+- Bumped version to 1.2.0
+- Added support for google cloud wavenet voices, much higher quality!
