--- a/changelog.txt
+++ b/changelog.txt
@@ -22,3 +22,7 @@ version
 1.2.0
 - Bumped version to 1.2.0
 - Added support for google cloud wavenet voices, much higher quality!
+1.2.1
+- Squashed bugs
+1.2.2
+- Used a bugzapper
